hphp/test/slow/unset/unused_param_unset_local.php.expectf
Fatal error: Uncaught exception 'UndefinedVariableException' with message 'Undefined variable: foo' in %s/unused_param_unset_local.php:4
Stack trace:
%A
